// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Select correctly 1`] = `
<DocumentFragment>
  <div
    class="af-form__select-container"
  >
    <select
      class="af-form__input-select"
      id="muid"
      name="placeName"
    >
      <option
        value=""
      >
        - Select -
      </option>
      <option
        value="fun"
      >
        For fun
      </option>
      <option
        value="work"
      >
        For work
      </option>
      <option
        value="drink"
      >
        For drink
      </option>
    </select>
    <span
      aria-controls="muid"
      class="glyphicon glyphicon-menu-down"
    />
  </div>
</DocumentFragment>
`;

exports[`renders Select correctly with classModier 1`] = `
<DocumentFragment>
  <div
    class="af-form__select-container"
  >
    <select
      class="af-form__input-select af-form__input-select--custom"
      id="muid"
      name="placeName"
    >
      <option
        value=""
      >
        - Select -
      </option>
      <option
        value="fun"
      >
        For fun
      </option>
      <option
        value="work"
      >
        For work
      </option>
      <option
        value="drink"
      >
        For drink
      </option>
    </select>
    <span
      aria-controls="muid"
      class="glyphicon glyphicon-menu-down"
    />
  </div>
</DocumentFragment>
`;

exports[`renders SelectBase correctly 1`] = `
<DocumentFragment>
  <div
    class="af-form__select-container"
  >
    <select
      class="af-form__input-select"
      id="muid"
      name="placeName"
    >
      <option
        value="fun"
      >
        For fun
      </option>
      <option
        value="work"
      >
        For work
      </option>
      <option
        value="drink"
      >
        For drink
      </option>
    </select>
    <span
      aria-controls="muid"
      class="glyphicon glyphicon-menu-down"
    />
  </div>
</DocumentFragment>
`;

exports[`renders SelectBase correctly with classModier 1`] = `
<DocumentFragment>
  <div
    class="af-form__select-container"
  >
    <select
      class="af-form__input-select af-form__input-select--custom"
      id="muid"
      name="placeName"
    >
      <option
        value="fun"
      >
        For fun
      </option>
      <option
        value="work"
      >
        For work
      </option>
      <option
        value="drink"
      >
        For drink
      </option>
    </select>
    <span
      aria-controls="muid"
      class="glyphicon glyphicon-menu-down"
    />
  </div>
</DocumentFragment>
`;

exports[`renders SelectInput correctly 1`] = `
<DocumentFragment>
  <div
    class="row af-form__group"
  >
    <div
      class="col-md-2"
    >
      <label
        class="af-form__group-label"
        for="muid"
      >
        label
      </label>
    </div>
    <div
      class="col-md-10"
    >
      <div
        class="af-form__select"
      >
        <div
          class="af-form__select-container"
        >
          <select
            class="af-form__input-select"
            id="muid"
            name="placeName"
          >
            <option
              value=""
            >
              - Select -
            </option>
            <option
              value="fun"
            >
              For fun
            </option>
            <option
              value="work"
            >
              For work
            </option>
            <option
              value="drink"
            >
              For drink
            </option>
          </select>
          <span
            aria-controls="muid"
            class="glyphicon glyphicon-menu-down"
          />
        </div>
      </div>
      <small
        class="af-form__help"
      >
        Enter the place type
      </small>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders SelectInput correctly with classModier 1`] = `
<DocumentFragment>
  <div
    class="row af-form__group af-form__group--custom"
  >
    <div
      class="col-md-2"
    >
      <label
        class="af-form__group-label"
        for="muid"
      >
        label
      </label>
    </div>
    <div
      class="col-md-10"
    >
      <div
        class="af-form__select"
      >
        <div
          class="af-form__select-container"
        >
          <select
            class="af-form__input-select af-form__input-select--custom"
            id="muid"
            name="placeName"
          >
            <option
              value=""
            >
              - Select -
            </option>
            <option
              value="fun"
            >
              For fun
            </option>
            <option
              value="work"
            >
              For work
            </option>
            <option
              value="drink"
            >
              For drink
            </option>
          </select>
          <span
            aria-controls="muid"
            class="glyphicon glyphicon-menu-down"
          />
        </div>
      </div>
      <small
        class="af-form__help"
      >
        Enter the place type
      </small>
    </div>
  </div>
</DocumentFragment>
`;
